resolved bug with content of page being hidding behind search or nav

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -11,7 +11,7 @@ body {
 
 .main {
   /* Pushes content below Search Bar */
-  padding: 10px 20px 0 20px;
+  padding: 100px 20px 75px 20px;
 }
 
 img {
