--- a/src/components/Static_MenuBars/SearchBar/SearchBar.css
+++ b/src/components/Static_MenuBars/SearchBar/SearchBar.css
@@ -3,7 +3,7 @@
     display: flex;
     background-color: #c4c4c4;
     justify-content: center;
-    /* position: fixed; */
+    position: fixed;
     width: 100%
 }
 
